fix(Header/Footer/Welcome): display problem on small screen-size devices

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -5,7 +5,7 @@
         justify-content: space-between;
         align-items: center;
         max-width: 1100px;
-        padding: 20px 0;
+        padding: 20px 16px;
         margin: 0 auto;
         width: 100%;
         .button {
@@ -39,7 +39,7 @@
     .footerInner {
         max-width: 1100px;
         margin: 0 auto;
-        padding: 40px 0;
+        padding: 40px 16px;
         width: 100%;
         display: flex;
         justify-content: space-between;
